[BE][Feat]: Update ParticipantService with getIndividualList